# Captured

./: README.md  План разработки.rtf
project/client/: CMakeLists.txt
project/client/cmake_modules/: FindSFML.cmake
project/client/graphics/: CMakeLists.txt  DataPacket.cpp
project/client/graphics/src/: main.cpp
project/client/src/: main.cpp
project/graphics/: CMakeLists.txt  Cursor.cpp  Cursor.h  DataPacket.cpp  DataPacket.h  GraphicsController.cpp  GraphicsController.h  Hex.h  HexMap.cpp  HexMap.h  HexSpace.h  JSONParser.h  Move.h  MovingObject.h  Object.h  ObjectArray.h  PacketGenerator.h  PacketParser.h  Person Struct.h  Player.cpp  Player.h  PlayersImitation.h  Server2ClientParser.h  StaticObject.h  StationaryObject.h  TextureOwner.h  Textures.h  main.cpp
project/graphics/Contents/psd/: sprite
project/graphics/Contents/reflection.pxd/: metadata.info
project/graphics/Contents/reflection.pxd/QuickLook/: Icon.tiff  Preview.tiff  Thumbnail.tiff
project/graphics/Contents/reflection.pxd/data/: AEA63444-3B87-4C90-8A06-FA23D3C8C8DB
project/graphics/Drawable Objects/: HexSpace.h  MovableObject.h  MovingObject.h  Object.h  ObjectArray.h  StationaryObject.h
project/graphics/Modules/headers/: GraphicsController.h  MouseController.h
project/graphics/Modules/source/: GraphicsController.cpp  MouseController.cpp
project/graphics/src/: main.cpp
project/graphics/textures/packs/: Neon.json
project/protobuf/: client2server.pb.cc  client2server.pb.h  client2server.proto  server2client.pb.cc  server2client.pb.h  server2client.proto
project/server/: CMakeLists.txt  README.md  a.out
project/server/include/: CellState.h  Hex.h  MapRender.h  RenderManager.h  Server.h  Socket.h  StructInit.h
project/server/src/: MapRender.cpp  RenderManager.cpp  Server.cpp  Socket.cpp  main.cpp
